--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
     "@angular/core": "~11.0.6",
     "@angular/fire": "^6.1.4",
     "@angular/forms": "~11.0.6",
+    "@angular/localize": "~11.0.6",
     "@angular/platform-browser": "~11.0.6",
     "@angular/platform-browser-dynamic": "~11.0.6",
     "@angular/router": "~11.0.6",
     "@fortawesome/angular-fontawesome": "^0.8.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
+    "bootstrap": "^4.5.0",
     "firebase": "^8.2.4",
+    "marked": "^1.2.8",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
