--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "bootstrap": "^4.5.0",
+    "chart.js": "^2.9.4",
     "firebase": "^8.2.4",
     "marked": "^1.2.8",
+    "ng2-charts": "^2.4.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
