--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "marked": "^1.2.8",
     "ng2-charts": "^2.4.2",
     "rxjs": "~6.6.0",
+    "safe-pipe": "^1.0.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
