--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "firebase": "^8.2.4",
     "marked": "^1.2.8",
     "ng2-charts": "^2.4.2",
+    "ngx-paypal": "^7.0.0",
     "rxjs": "~6.6.0",
     "safe-pipe": "^1.0.3",
     "tslib": "^2.0.0",
